--- a/Day_3_Introduction.ipynb
+++ b/Day_3_Introduction.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRyFdKUlGE0Bi53Z9AufDW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +96,7 @@
         "id": "oHrs4Y0MWPOr",
         "outputId": "ad1b3147-67e3-4c66-a69b-3b62a813aeb3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +121,7 @@
         "id": "lL3D84m7XONH",
         "outputId": "2fab7efd-a1ba-4e7f-a139-972046c99554"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +146,7 @@
         "id": "mn3qPbo_XZ2v",
         "outputId": "b13169a0-1cf7-46a6-8fc6-d238470c9d54"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +171,7 @@
         "id": "IJbUZ94LX-2c",
         "outputId": "937e49f8-c3dd-4fad-df83-251c1699bf7a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +185,7 @@
     {
       "cell_type": "code",
       "source": [
-        "Var4=4^6\n",
+        "Var4=4**6\n",
         "print (Var4)\n",
         "#datatype here is an integer with 2 operators"
       ],
@@ -195,15 +194,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VsXMHXkDYW5r",
-        "outputId": "b2e70635-6d1b-49f3-ffa1-e6e555674c8f"
+        "outputId": "5aa55299-cb55-4b23-c5de-5b859c828099"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n"
+            "4096\n"
           ]
         }
       ]
@@ -222,7 +221,7 @@
         "id": "tWS4q3jZY2Jw",
         "outputId": "68f61ded-c3cb-4440-e187-a2dd862ad8ab"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +247,7 @@
         "id": "OMdVVyWmZ5YJ",
         "outputId": "6f3e86a9-9026-4345-831a-29de943f6e85"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,25 +280,23 @@
     {
       "cell_type": "code",
       "source": [
-        "Var7=(4mod3)\n",
+        "Var7=4%3\n",
         "print (Var7)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
+          "base_uri": "https://localhost:8080/"
         },
         "id": "f0MjGRW9awAb",
-        "outputId": "7266ddfe-5043-4ca5-f61f-5273dce74304"
+        "outputId": "f0d5a715-25d1-4391-95bd-f7834e4af5d3"
       },
-      "execution_count": 40,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-c38b7c01f300>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Var7=(4mod3)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
           ]
         }
       ]
@@ -307,10 +304,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The last variable Var7 does not produce the correct output when using the modulo operator due to a syntax error"
+        "Datatype float or fraction with the modulo operator %"
       ],
       "metadata": {
-        "id": "wW-_hN4Ecc8g"
+        "id": "vl3uaWuA3bta"
       }
     }
   ]
