--- a/Day_4_Introduction.ipynb
+++ b/Day_4_Introduction.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBINnBUbWBZpD5/80ag72Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +71,7 @@
         "id": "IvRu56IWlNFy",
         "outputId": "f6130be5-7e28-4878-8833-63dc8b084431"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +95,7 @@
         "id": "gKHjPPn_lh07",
         "outputId": "01823c2f-10f7-42e1-c6a8-92bdd8092dd0"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +129,7 @@
         "id": "tbVQxYPZok8L",
         "outputId": "3a2bf46a-e7c2-4adf-ffbc-142fb3268910"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +155,7 @@
         "id": "cFl3ix6AqBI_",
         "outputId": "f2b4ede9-cb33-4f82-8992-3b3e5fee9947"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +181,7 @@
         "id": "dc_KUcNTqWc0",
         "outputId": "3c0da93a-ff6a-4be1-836d-ac0653cca97f"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,23 +198,46 @@
         "#action item\n",
         "List2=[5, 6, 7.0, \"Eight\", \"Nine\"]\n",
         "print (List2)\n",
-        "List3=List2\n",
-        "print (List3)"
+        "print (type(List2))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q352JpBvqqoD",
-        "outputId": "caf2d4bf-04e2-4062-99f7-acd03cab053e"
+        "outputId": "b4dcdf3a-5aea-404e-ea80-d68c8e00577e"
       },
-      "execution_count": 61,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[5, 6, 7.0, 'Eight', 'Nine']\n",
+            "<class 'list'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list3=(List2)\n",
+        "print (list3)"
+      ],
+      "metadata": {
+        "id": "X2gUsYKz6F_X",
+        "outputId": "4a2cc14b-2aa8-4bc0-891a-30091341a337",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "[5, 6, 7.0, 'Eight', 'Nine']\n"
           ]
         }
